// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`alarm-column-value Renders \`alarm-column-value\` with custom props 1`] = `
<color-indicator-wrapper-stub
  alarm="[object Object]"
  entity="[object Object]"
  type="impact_state"
>
  <alarm-column-cell-stub
    alarm="[object Object]"
    column="[object Object]"
    selectedtag="tag"
    widget="[object Object]"
  />
</color-indicator-wrapper-stub>
`;

exports[`alarm-column-value Renders \`alarm-column-value\` with custom template 1`] = `
<div
  class="alarm-column-value"
>
  entity-name === entity-name in the alarm-name
</div>
`;

exports[`alarm-column-value Renders \`alarm-column-value\` with required props 1`] = `
<alarm-column-cell-stub
  alarm="[object Object]"
  column="[object Object]"
  selectedtag=""
  widget="[object Object]"
/>
`;
